fix: contactpage overflow temporary fix

--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -6,12 +6,12 @@
   @include flex-center;
   justify-content: space-between;
   background-color: #fff;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
 
   @media only screen and (max-width: $breakpoint-mid) {
-    // flex-direction: column;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    // align-items: flex-start;
   }
 }
 
