--- a/components/Contact/InputElement.module.scss
+++ b/components/Contact/InputElement.module.scss
@@ -51,9 +51,8 @@ $color: #545454;
     height: 100%;
     margin-bottom: 1rem;
     @media only screen and (max-width: $breakpoint-mid) {
-      min-height: 12rem;
-      margin-bottom: 0.7rem;
-      
+      min-height: 11rem;
+      margin-bottom: 0.5rem;
     }
   }
 }
